compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__match_dynamic_size_error.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
assertion_line: 533
expression: "\nfn go(x) {\n  let n = 16\n  let assert <<a:size(n)>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let n = 16
  let assert <<a:size(n)>> = x
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/go/error.gleam:4:16
  │
4 │   let assert <<a:size(n)>> = x
  │                ^^^^^^^^^

Non-constant size option in patterns is not supported for Go compilation.
